[package]
name = "did-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
time = { version = "^0.3.0", features = [ "parsing", "macros" ] }
url = "^2.0"
jsonwebkey = "^0.3"
multibase = { version ="^0.9", default-features = false }
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"

[dev-dependencies]
rand = "^0.8.0"
