[package]
name = "did-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
time = { version = "^0.3.0", features = [ "parsing", "macros" ] }
url = { version = "^2.0", features = [ "serde" ] }
jsonwebtoken = "^8.3"
multibase = { version ="^0.9", default-features = false }
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
either = { version = "^1.8", features = [ "serde" ] }
sort = "^0.8"
reqwest = { version = "^0.11.0", features = ["blocking", "json"] }

[dev-dependencies]
rand = "^0.8.0"
