[package]
name = "did-toolkit"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "did-toolkit is a spec-compliant implementation of did-core, W3C's 'Decentralized Identity Documents'"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://git.juici.ly/erikh/did-toolkit"
repository = "https://git.juici.ly/erikh/did-toolkit"

[dependencies]
anyhow = "^1.0"
time = { version = "^0.3.0", features = [ "parsing", "macros" ] }
url = { version = "^2.0", features = [ "serde" ] }
josekit = "^0.10.0"
multibase = { version = "^0.9", default-features = false }
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
either = { version = "^1.8", features = [ "serde" ] }
sort = "^0.8"
reqwest = { version = "^0.12.0", features = ["blocking", "json"] }
rand = "^0.9.0"
clap = { version = "^4.2.0", features = [ "derive" ] }
ciborium = "^0.2.0"
